@@ -1,11 +1,11 @@
 /*****************************************************************************
- *  $Id: base64.h,v 1.1 2003/04/08 18:16:16 dun Exp $
+ *  $Id: base64.h,v 1.2 2004/02/05 21:36:03 dun Exp $
  *****************************************************************************
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
  *  UCRL-CODE-2003-???.
  *
- *  Copyright (C) 2003 The Regents of the University of California.
+ *  Copyright (C) 2003-2004 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
  *  Written by Chris Dunlap <cdunlap@llnl.gov>.
  *
@@ -59,8 +59,8 @@ int base64_init (base64_ctx *x);
  *  Returns 0 on success, or -1 on error.
  */
 
-int base64_encode_update (base64_ctx *x, void *dst, unsigned int *dstlen,
-                          const void *src, unsigned int srclen);
+int base64_encode_update (base64_ctx *x, void *dst, int *dstlen,
+                          const void *src, int srclen);
 /*
  *  Updates the base64 context [x], encoding [srclen] bytes from [src]
  *    into [dst], and setting [dstlen] to the number of bytes written.
@@ -68,7 +68,7 @@ int base64_encode_update (base64_ctx *x, void *dst, unsigned int *dstlen,
  *  Returns 0 on success, or -1 on error.
  */
 
-int base64_encode_final (base64_ctx *x, void *dst, unsigned int *dstlen);
+int base64_encode_final (base64_ctx *x, void *dst, int *dstlen);
 /*
  *  Finalizes the base64 context [x], encoding the "final" data remaining
  *    in a partial block into [dst], and setting [dstlen] to the number of
@@ -78,8 +78,8 @@ int base64_encode_final (base64_ctx *x, void *dst, unsigned int *dstlen);
  *  Returns 0 on success, or -1 on error.
  */
 
-int base64_decode_update (base64_ctx *x, void *dst, unsigned int *dstlen,
-                          const void *src, unsigned int srclen);
+int base64_decode_update (base64_ctx *x, void *dst, int *dstlen,
+                          const void *src, int srclen);
 /*
  *  Updates the base64 context [x], decoding [srclen] bytes from [src]
  *    into [dst], and setting [dstlen] to the number of bytes written.
@@ -87,7 +87,7 @@ int base64_decode_update (base64_ctx *x, void *dst, unsigned int *dstlen,
  *  Returns 0 on success, or -1 on error.
  */
 
-int base64_decode_final (base64_ctx *x, void *dst, unsigned int *dstlen);
+int base64_decode_final (base64_ctx *x, void *dst, int *dstlen);
 /*
  *  Finalizes the base64 context [x], decoding the "final" data remaining
  *    in a partial block into [dst], and setting [dstlen] to the number of
@@ -103,16 +103,14 @@ int base64_cleanup (base64_ctx *x);
  *  Returns 0 on success, or -1 on error.
  */
 
-int base64_encode_block (void *dst, unsigned int *dstlen,
-                         const void *src, unsigned int srclen);
+int base64_encode_block (void *dst, int *dstlen, const void *src, int srclen);
 /*
  *  Base64-encodes [srclen] bytes from the contiguous [src] into [dst].
  *    If [dstlen] is not NULL, it will be set to the number of bytes written.
  *  Returns 0 on success, or -1 on error.
  */
 
-int base64_decode_block (void *dst, unsigned int *dstlen,
-                         const void *src, unsigned int srclen);
+int base64_decode_block (void *dst, int *dstlen, const void *src, int srclen);
 /*
  *  Base64-decodes [srclen] bytes from the contiguous [src] into [dst].
  *    If [dstlen] is not NULL, it will be set to the number of bytes written.
