@@ -1,11 +1,11 @@
 /*****************************************************************************
- *  $Id: cipher.h,v 1.2 2003/04/18 23:17:38 dun Exp $
+ *  $Id: cipher.h,v 1.3 2004/02/05 21:36:03 dun Exp $
  *****************************************************************************
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
  *  UCRL-CODE-2003-???.
  *
- *  Copyright (C) 2003 The Regents of the University of California.
+ *  Copyright (C) 2003-2004 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
  *  Written by Chris Dunlap <cdunlap@llnl.gov>.
  *
@@ -67,8 +67,8 @@ int cipher_init (cipher_ctx *x, const EVP_CIPHER *ci,
  *  Returns 0 on success, or -1 on error.
  */
 
-int cipher_update (cipher_ctx *x, void *dst, unsigned int *dstlen,
-                   const void *src, unsigned int srclen);
+int cipher_update (cipher_ctx *x, void *dst, int *dstlen,
+                   const void *src, int srclen);
 /*
  *  Updates the cipher context [x], reading [srclen] bytes from [src] and
  *    writing [dstlen] bytes to [dst].  This can be called multiple times
@@ -78,7 +78,7 @@ int cipher_update (cipher_ctx *x, void *dst, unsigned int *dstlen,
  *  Returns 0 on success, or -1 on error.
  */
 
-int cipher_final (cipher_ctx *x, void *dst, unsigned int *dstlen);
+int cipher_final (cipher_ctx *x, void *dst, int *dstlen);
 /*
  *  Finalizes the cipher context [x], processing the "final" data
  *    remaining in a partial block and writing [dstlen] bytes to [dst].
